# cubby

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  install.sh  pyproject.toml  uninstall.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: default.toml
docs/: architecture.md  configuration.md  faq.md  recipes.md  usage.md
examples/: personal.example.toml
packaging/launchd/: com.cubby.agent.plist.tmpl
packaging/systemd/: cubby.service.tmpl
src/cubby/: __init__.py  __main__.py  cli.py
src/cubby/adapters/: __init__.py  config.py  extraction.py  filesystem.py  journal.py  logging.py  ui.py
src/cubby/adapters/service/: __init__.py  base.py  factory.py  launchd.py  systemd.py
src/cubby/app/: __init__.py  report.py  sorter.py  undo.py  watcher.py
src/cubby/domain/: __init__.py  category.py  duration.py  engine.py  file_ref.py
tests/: conftest.py  test_cli.py  test_config.py  test_dedupe.py  test_duration.py  test_engine.py  test_engine_content.py  test_extraction.py  test_filesystem.py  test_fuzz.py  test_integration.py  test_report.py  test_service.py  test_sorter.py  test_ui.py  test_undo.py  test_watcher.py
